--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
+click==8.0.1
+colorama==0.4.4
 Cython==0.29.21
 dataclasses==0.8
 gensim==4.0.1
+importlib-metadata==4.6.1
+joblib==1.0.1
+nltk==3.6.2
 numpy==1.19.5
 pandas==1.1.5
 python-dateutil==2.8.2
 pytz==2021.1
+regex==2021.7.6
 scipy==1.5.4
 six==1.16.0
 smart-open==5.1.0
 torch==1.9.0
+tqdm==4.61.2
 typing-extensions==3.10.0.0
+zipp==3.5.0
