--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,13 @@ joblib==1.0.1
 nltk==3.6.2
 numpy==1.19.5
 pandas==1.1.5
+pickle5==0.0.11
+PyQt5==5.15.4
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.9.0
 python-dateutil==2.8.2
 pytz==2021.1
+pyuic5-tool==0.0.1
 regex==2021.7.6
 scipy==1.5.4
 six==1.16.0
